Refactoring form localization

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -10,25 +10,23 @@ ru:
         title: 'Новая станция'
       edit:
         title: 'Редактировать станцию'
-      form:
-        submit: '%{action} станцию'
       list: 'Список станций'
     routes:
       new:
         title: 'Новый маршрут'
       edit:
         title: 'Редактировать маршрут'
-      form:
-        submit: '%{action} маршрут'
       list: 'Список маршрутов'
     trains:
       new:
         title: 'Новый поезд'
       edit:
         title: 'Редактировать поезд'
-      form:
-        submit: '%{action} поезд'
       list: 'Список поездов'
       car_sort:
         head: 'С головы поезда'
         tail: 'С хвоста поезда'
+  helpers:
+    submit:
+      create: 'Создать'
+      update: 'Изменить'
